app/src/style/login.scss
@use '@carbon/react/scss/theme' as theme with (
	$theme: (
		text-secondary: #ffff,
		text-error: #ff8389
	)
);

#login {
	@include theme.theme;

	color: theme.$text-secondary;

	& .cds--form-item {
		min-height: 84px;
	}
}

